k8s/infrastructure/controllers/reloader/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-reloader
  namespace: reloader
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: reloader}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '9090', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}], toPorts: [ports: [{port: '9090', protocol: TCP}]]}  # Prometheus
  egress:
    - {toEntities: [kube-apiserver]}
